--- a/frontend/src/pages/Home/css/Home.module.scss
+++ b/frontend/src/pages/Home/css/Home.module.scss
@@ -3,4 +3,16 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+
+    .pageMessage {
+        text-align: center;
+        font-weight: bold;
+        font-style: italic;
+        color: var(--pageMessage-color);
+        font-size: 20px;
+  
+        @media screen and (min-width: $small-device) {
+          font-size: 24px;
+        }
+      }
 }
