--- a/frontend/src/pages/Management/css/Management.module.scss
+++ b/frontend/src/pages/Management/css/Management.module.scss
@@ -4,6 +4,18 @@
   display: flex;
   flex-direction: column;
 
+  .pageMessage {
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+    color: var(--pageMessage-color);
+    font-size: 20px;
+
+    @media screen and (min-width: $small-device) {
+      font-size: 24px;
+    }
+  }
+
   .link {
     background-color: var(--button-color);
     color: var(--buttonText-color);
